# moexr

./: .editorconfig  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-approve-copilot.yml  ci.yml  publish.yml
