[project]
name = "moexr-workspace"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "pytest~=8.4",
  "pytest-asyncio~=1.1",
  "coverage[toml]",
  "ruff~=0.13",
  "pyright",
  "aioresponses~=0.7",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501", "UP045"]
format.quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
